test/corpus/fail/bad-char-lit4.mo
=========
bad-char-lit4.mo
=========

ignore('')

---

(source_file
  (exp_dec
    (ignore_exp
      (par_exp
        (lit_exp
          (char_literal))))))
